[package]
name = "hh"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
rusqlite = { version = "0.30.0", features = ["bundled"] }
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
thiserror = "1.0.56"
chrono = "0.4.34"
